// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`atom 1.0 > should generate a valid feed 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom" xml:lang="en">
    <id>http://example.com/?link=sanitized&amp;value=4</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <author>
        <name>John Doe</name>
        <email>johndoe@example.com</email>
        <uri>https://example.com/johndoe?link=sanitized&amp;value=2</uri>
    </author>
    <link rel="alternate" href="http://example.com/?link=sanitized&amp;value=3"/>
    <link rel="self" href="http://example.com/sampleFeed.rss?link=sanitized&amp;value=2"/>
    <link rel="hub" href="wss://example.com/"/>
    <subtitle>This is my personnal feed!</subtitle>
    <logo>http://example.com/image.png?link=sanitized&amp;value=6</logo>
    <icon>http://example.com/image.ico?link=sanitized&amp;value=7</icon>
    <rights>All rights reserved 2013, John Doe</rights>
    <category term="Technology"/>
    <contributor>
        <name>Johan Cruyff</name>
        <email>johancruyff@example.com</email>
        <uri>https://example.com/johancruyff</uri>
    </contributor>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>https://example.com/hello-world?id=this&amp;that=true</id>
        <link href="https://example.com/hello-world?link=sanitized&amp;value=2"/>
        <link rel="enclosure" href="https://example.com/hello-world.jpg" type="image/jpg" length="12665"/>
        <link rel="enclosure" href="https://example.com/hello-world.jpg" type="image/jpg"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <summary type="html"><![CDATA[This is an article about Hello World.]]></summary>
        <content type="html"><![CDATA[Content of my item]]></content>
        <author>
            <name>Jane Doe</name>
            <email>janedoe@example.com</email>
            <uri>https://example.com/janedoe?link=sanitized&amp;value=2</uri>
        </author>
        <author>
            <name>Joe Smith</name>
            <email>joesmith@example.com</email>
            <uri>https://example.com/joesmith</uri>
        </author>
        <author>
            <name>Joe Smith, Name Only</name>
        </author>
        <category label="Grateful Dead"/>
        <category label="MSFT"/>
        <contributor>
            <name>Shawn Kemp</name>
            <email>shawnkemp@example.com</email>
            <uri>https://example.com/shawnkemp</uri>
        </contributor>
        <contributor>
            <name>Reggie Miller</name>
            <email>reggiemiller@example.com</email>
            <uri>https://example.com/reggiemiller</uri>
        </contributor>
        <published>2013-07-10T23:00:00.000Z</published>
    </entry>
</feed>"
`;

exports[`atom 1.0 > should generate a valid feed with stylesheet 1`] = `
"<?xml version="1.0" encoding="utf-8"?><?xml-stylesheet href="https://exmaple.com/rss.xsl" type="text/xsl"?>
<feed xmlns="http://www.w3.org/2005/Atom" xml:lang="en">
    <id>http://example.com/</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <author>
        <name>John Doe</name>
        <email>johndoe@example.com</email>
        <uri>https://example.com/johndoe</uri>
    </author>
    <link rel="alternate" href="http://example.com/"/>
    <link rel="hub" href="wss://example.com/"/>
    <subtitle>This is my personnal feed!</subtitle>
    <logo>http://example.com/image.png</logo>
    <rights>All rights reserved 2013, John Doe</rights>
</feed>"
`;

exports[`atom 1.0 > should handle multiple feed authors 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://example.com/</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <author>
        <name>John Doe</name>
        <email>john@doe.com</email>
    </author>
    <author>
        <name>Alice Doe</name>
    </author>
    <author>
        <name/>
        <uri>http://bob.example.com/</uri>
    </author>
    <link rel="alternate" href="https://example.com/"/>
</feed>"
`;

exports[`atom 1.0 > should ignore invalid language > on feed 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://example.com/</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://example.com/"/>
    <entry xml:lang="en">
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
</feed>"
`;

exports[`atom 1.0 > should ignore invalid language > on items when feed has a language set 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom" xml:lang="en">
    <id>https://example.com/</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://example.com/"/>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
</feed>"
`;

exports[`atom 1.0 > should ignore invalid language > on items when feed has no language set 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://example.com/</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://example.com/"/>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Lorem Foobar]]></content>
    </entry>
</feed>"
`;

exports[`atom 1.0 > should include xml:lang attribute for items with a language defined 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom" xml:lang="de">
    <id>https://example.com/</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://example.com/"/>
    <entry>
        <title type="html"><![CDATA[Hallo Welt]]></title>
        <id>http://example.org/2013/12/14</id>
        <link href="http://example.org/2013/12/14"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Ich übernehme die Sprache meines übergeordneten Tags.]]></content>
    </entry>
    <entry xml:lang="en">
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/2013/12/15</id>
        <link href="http://example.org/2013/12/15"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[My language is set to English]]></content>
    </entry>
    <entry xml:lang="fr">
        <title type="html"><![CDATA[Bonjour, monde]]></title>
        <id>http://example.org/2013/12/15</id>
        <link href="http://example.org/2013/12/15"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <content type="html"><![CDATA[Ma langue est réglée sur le français.]]></content>
    </entry>
</feed>"
`;

exports[`atom 1.0 > should sanitize enclosure url 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom" xml:lang="en">
    <id>http://example.com/?link=sanitized&amp;value=4</id>
    <title>Feed Title</title>
    <updated>2013-07-13T23:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <author>
        <name>John Doe</name>
        <email>johndoe@example.com</email>
        <uri>https://example.com/johndoe?link=sanitized&amp;value=2</uri>
    </author>
    <link rel="alternate" href="http://example.com/?link=sanitized&amp;value=3"/>
    <link rel="self" href="http://example.com/sampleFeed.rss?link=sanitized&amp;value=2"/>
    <link rel="hub" href="wss://example.com/"/>
    <subtitle>This is my personnal feed!</subtitle>
    <logo>http://example.com/image.png?link=sanitized&amp;value=6</logo>
    <icon>http://example.com/image.ico?link=sanitized&amp;value=7</icon>
    <rights>All rights reserved 2013, John Doe</rights>
    <category term="Technology"/>
    <contributor>
        <name>Johan Cruyff</name>
        <email>johancruyff@example.com</email>
        <uri>https://example.com/johancruyff</uri>
    </contributor>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>https://example.com/hello-world?id=this&amp;that=true</id>
        <link href="https://example.com/hello-world?link=sanitized&amp;value=2"/>
        <link rel="enclosure" href="https://example.com/hello-world.jpg" type="image/jpg" length="12665"/>
        <link rel="enclosure" href="https://example.com/hello-world.jpg" type="image/jpg"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
        <summary type="html"><![CDATA[This is an article about Hello World.]]></summary>
        <content type="html"><![CDATA[Content of my item]]></content>
        <author>
            <name>Jane Doe</name>
            <email>janedoe@example.com</email>
            <uri>https://example.com/janedoe?link=sanitized&amp;value=2</uri>
        </author>
        <author>
            <name>Joe Smith</name>
            <email>joesmith@example.com</email>
            <uri>https://example.com/joesmith</uri>
        </author>
        <author>
            <name>Joe Smith, Name Only</name>
        </author>
        <category label="Grateful Dead"/>
        <category label="MSFT"/>
        <contributor>
            <name>Shawn Kemp</name>
            <email>shawnkemp@example.com</email>
            <uri>https://example.com/shawnkemp</uri>
        </contributor>
        <contributor>
            <name>Reggie Miller</name>
            <email>reggiemiller@example.com</email>
            <uri>https://example.com/reggiemiller</uri>
        </contributor>
        <published>2013-07-10T23:00:00.000Z</published>
    </entry>
    <entry>
        <title type="html"><![CDATA[Hello World]]></title>
        <id>http://example.org/sanitize</id>
        <link href="http://example.org/sanitize"/>
        <link rel="enclosure" href="https://example.com/hello&amp;world.png" type="image/png"/>
        <updated>2013-07-13T23:00:00.000Z</updated>
    </entry>
</feed>"
`;
